Index Alignment fix

--- a/AspnetIdentityRoleBasedTutorial/wwwroot/css/site.css
+++ b/AspnetIdentityRoleBasedTutorial/wwwroot/css/site.css
@@ -1463,7 +1463,7 @@ span.psw {
 
 .section4 {
     width: 100%;
-    min-height: 56vh;
+    min-height: 61vh;
     overflow-y: hidden;
     padding: 56px 0px;
     box-shadow: 0px 6px 16px -6px rgba(1,1,1,0.5);
